<package>
  <name>ql2catkin</name>
  <version>0.0.1</version>
  <description>
    hack to create catkinized ROS packages from quicklisp
  </description>

  <author email="dimarco@ipvs.uni-stuttgart.de">Daniel Di Marco</author>
  <maintainer email="dimarco@ipvs.uni-stuttgart.de">Daniel Di Marco</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>
  <run_depend>sbcl</run_depend>
</package>

